fixed grid vertical align and line-height

--- a/Chalkable.Web/assets/sass2/3_molecules/_grid.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_grid.sass
@@ -15,6 +15,8 @@
   .th, .td, .col
     display: table-cell
     padding: 2px
+    vertical-align: middle
+    line-height: 20px
 
   .head
     font-weight: 600
